Correct margins and padding on mobile responsive version when on mobile view port

--- a/css/index.css
+++ b/css/index.css
@@ -254,7 +254,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk .walk-text {
     width: 100%;
-    padding: 15px;
+    padding: 15px 0;
   }
 }
 .home .walk .walk-text h3 {
@@ -310,6 +310,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk .walk-img {
     width: 100%;
+    margin-left: inherit;
   }
 }
 .home .walk .walk-img img {
