--- a/less/home-page.less
+++ b/less/home-page.less
@@ -74,7 +74,7 @@
 
       @media @mobile {
         width: 100%;
-        .paddingElementary()
+        padding: 15px 0;
       }
 
       h3 {
@@ -105,6 +105,7 @@
       margin-left: 4%;
       @media @mobile {
         width: 100%;
+        margin-left: inherit;
       }
       
       img {
